final project after changes

--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body >
-    <div id="toolbar" class="absolute">
+    <div id="toolbar" class="fixed-position">
     </div>
     
-    <div id="navigation-panel" class="absolute inline">    
+    <div id="navigation-panel" class="fixed-position inline">    
     </div>
     
-    <div id="content" class="inline absolute">
+    <div id="content" class="inline fixed-position">
         <div class="content-value"></div>
         <div class="content-value"></div>
         <div class="content-value"></div>
